# emailee

./: .bandit  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: build.yml  lint.yml
emailee/: __init__.py  emailee.py  emailee_async.py
tests/: conftest.py  example.test.env.toml  mail_examples.py  test_emailee.py  test_sendasync.py
tests/test_attachments/: test_spreadsheet.xlsx
