[tool.poetry]
name = "emailee"
version = "1.0.0"
description = "A robust smtp email send tool, with asyncronous send capability"
authors = ["Matt Walsh <git@mattwalsh.dev>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/mattwalshdev/emailee"
documentation = "http://github.com/mattwalshdev/emailee/README.md"
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Natural Language :: English',
    'Topic :: Communications :: Email',
    'Topic :: Communications :: Email :: Mail Transport Agents',
]

[tool.poetry.dependencies]
python = "^3.6.1"

[tool.poetry.dev-dependencies]
bandit = "^1.7.0"
pytest-cov = "^2.11.1"
pre-commit = "^2.12.1"
flake8 = "^3.9.1"
tox = "^3.23.0"
pytest = "^6.2.3"
mypy = "^0.812"
black = "^20.8b1"
isort = "^5.9.2"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
